Wed Oct 18 09:45:12 2000  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Cached_Connect_Strategy_T.h :
	* ace/Cached_Connect_Strategy_T.cpp: Added some fixes provided by
	  Edan Ayal <edana@bandwiz.com>.

Tue Oct 17 23:35:33 2000  David L. Levine <levine@cs.wustl.edu>

        * Don't use ACE_TSS_EMULATION by default with LynxOS 3.1.0
          because it's not necessary, according to
          Jessie Ragsdale <jessie.ragsdale@latuslw.com>, and breaks
          split=1.  Jessie was able to create upo to 118 natvie TSS keys,
          so the 3-key limit of LynxOS 3.0.0 has been removed in 3.1.0.
          [Bug 701]

Tue Oct 17 00:21:41 2000  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* examples/Service_Configurator/IPC-tests/server/Handle_Timeout.h,
	  examples/Service_Configurator/IPC-tests/server/Handle_Timeout.i,
	  examples/Service_Configurator/IPC-tests/server/Handle_R_Dgram.h,
	  examples/Service_Configurator/IPC-tests/server/Handle_R_Dgram.i,
	  examples/Service_Configurator/IPC-tests/server/Handle_Broadcast.h,
	  examples/Service_Configurator/IPC-tests/server/Handle_Broadcast.i,
	  examples/Service_Configurator/IPC-tests/server/Handle_L_FIFO.h,
	  examples/Service_Configurator/IPC-tests/server/Handle_L_FIFO.i,
	  examples/Service_Configurator/IPC-tests/server/Handle_R_Stream.h,
	  examples/Service_Configurator/IPC-tests/server/Handle_R_Stream.i:
	  Changed *::get_handle(), *::handle_input(), and *::handle_close() to
	  use ACE_HANDLE and ACE_INVALID_HANDLE instead of int and -1.

Mon Oct 16 14:05:13 2000  David L. Levine <levine@cs.wustl.edu>

        * ACE-INSTALL.html: removed spurious 3D characters from
          VxWorks section.

Mon Oct 16 11:17:08 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Makefile.am:
          Fixed misnamed file.

Mon Oct 16 11:07:34 2000  Carlos O'Ryan  <coryan@uci.edu>

        * ace/Log_Msg.cpp:
          Fixed memory leak, or rather, make sure that the default Log_Msg